first draft of the abstract

--- a/paper/sig-alternate.tex
+++ b/paper/sig-alternate.tex
@@ -127,7 +127,7 @@ Andreas Waltenberger\\
 
 \maketitle
 \begin{abstract}
-Abstract text.
+	In this paper we will analyse and summarize the current scientific state of sentiment analysis for different microblogging services like tumblr, Twitter and Facebook whereas our focus will mainly center around sentiment analysis for data received via the Twitter API. We will take a look at different approaches regarding classification and preprocessing of tweets as well as the creation and selection of resulting training data.
 \end{abstract}
 
 \section{Introduction}
